[project]
name = "bull-horn"
version = "0.1.0"
description = "Lightweight social media post scheduler for LinkedIn and X"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "filelock>=3.16.0",
]
